# ArduinoProjects

./: .gitignore
A6miniModule/: README.md
A6miniModule/A6withArduinoTestProject/: main.cpp
A6miniModule/TestMessage/: main.cpp
DHT11LCD/src/: main.cpp
Network/server/: main.cpp
ProjectGSM/: ProjectGSM.sln  platformio.ini
ProjectGSM/ProjectGSM/: ProjectGSM.ino  ProjectGSM.vcxproj  ProjectGSM.vcxproj.filters  gsm.cpp  gsm.h  main.cpp  speaker.h
ProjectGSM/ProjectGSM/__vm/: .ProjectGSM.vsarduino.h  Compile.vmps.xml  Configuration.Debug.vmps.xml  Upload.vmps.xml
ProjectGSM/src/: gsm.cpp  gsm.h  keyboard.cpp  keyboard.h  main.cpp  mouse.cpp  speaker.cpp  speaker.h
ProjectGSM/src/includes/core/: controller.cpp  controller.h
ProjectGSM/src/includes/device/gsm/: gsm.cpp  gsm.h
ProjectGSM/src/includes/device/keyboard/: keyboard.cpp  keyboard.h
ProjectGSM/src/includes/device/speaker/: speaker.cpp  speaker.h
ProjectGSM/src/includes/traffic/: traffic.cpp  traffic.h
SimpleProject/: README.md
SimpleProject/lib/: blinking.h
SimpleProject/src/: blinking.cpp  main.cpp
Speaker/: README.md
Speaker/lib/: speaker.h
Speaker/src/: main.cpp  speaker.cpp
TCPServer/: CMakeLists.txt  main.cpp
TCPServer [POSIX]/: CMakeLists.txt  README.md  main.cpp
TCPServer [POSIX]/src/client/: client.cpp  client.h
TCPServer [POSIX]/src/command/: command.h
TCPServer [POSIX]/src/config/: config.cpp  config.h
TCPServer [POSIX]/src/core/: clientinteraction.cpp  clientinteraction.h  connection.h  interaction.h
TCPServer [POSIX]/src/core/commands/: command.cpp  command.h  functions.cpp  functions.h  scheduler.cpp  scheduler.h
TCPServer [POSIX]/src/core/database/: database.cpp  database.h
TCPServer [POSIX]/src/server/: server.cpp  server.h
TCPServer [WINSOCK]/: README.md
TCPServer [WINSOCK]/sql/: DB structure.sql
TCPServer [WINSOCK]/src/config/: config.h
TCPServer [WINSOCK]/src/core/: clientinteraction.cpp  clientinteraction.h  connection.h  interaction.h
TCPServer [WINSOCK]/src/server/: server.cpp
TCPServer/lib/: client.h  clientinteraction.h  config.h  connection.h  interaction.h  server.h
TCPServer/sql/: DB structure.sql
TCPServer/src/: client.cpp  clientinteraction.cpp  config.cpp  server.cpp
TCPServer/src/client/: client.cpp  client.h
TCPServer/src/config/: config.cpp
TCPServer/src/server/: server.cpp  server.h
ThermistorLCD/src/: main.cpp
test/: platformio.ini
test/src/: interrupt.cpp  main.cpp
